# pico-pc-performance-monitor

./: README.md
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/scripts/: picoboot.sh
firmware/src/: app.rs  handlers.rs  io.rs  main.rs
host/: .env.example  Cargo.toml
host/src/: main.rs
icd/: Cargo.toml
icd/src/: lib.rs
